[package]
name = "painter_render"
version = "0.1.0"
edition = "2018"


[lib]
name = "painter_render"
crate-type = ["cdylib", "lib"]

[dependencies.pyo3]
version = "0.14.5"
features = ["extension-module"]

[dependencies]
glow = "0.11.0"
libc = "0.2.105"
painter_data = { path = "../painter-data" }
painter_tools = { path = "../painter-tools" }
log = "0.4.14"
simple_logger = "1.13.0"
png = "0.16.8"

